usecase-3/test/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
        listKind: K8sRequiredLabelsList
        plural: k8srequiredlabels
        singular: k8srequiredlabels
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            labels:
              type: array
              items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabels

          violation [{"msg": msg}] {
          some i
          provided := {label | input.spec.ingress[i].from[i].podSelector.matchLabels.type}
          allowed := {label | input.parameters.labels[i]}
          provided != allowed[i]
          msg := sprintf("%v is not allowed", [provided])
        }
